# voice-input-framework

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  VoiceInputFramework.spec  pyproject.toml  requirements-client.txt  requirements-llm.txt  requirements-server.txt  requirements-stt.txt  requirements.txt  run_cli.py  run_client.py  run_dev_server.py  run_gui.py  run_gui_qt.py  run_gui_tk.py  test_v1_1_features.py
.githooks/: pre-commit
.github/workflows/: build-release.yml  build.yml  ci.yml
client/: README.md  README_V1.1.md  __init__.py  app.py  audio.py  audio_capture.py  audio_processor.py  auto_start.py  cli.py  config_manager.py  cursor_tracker.py  floating_indicator.py  gui.py  gui_v2.py  hotkey_manager.py  network.py  notifier.py  stt_client.py  tray_manager.py  ui.py  update_checker.py  websocket_keepalive.py
client/tests/: test_cursor_tracker.py
config/launchd/: com.voiceinput.llm.plist  com.voiceinput.stt.plist
deploy/: daemon.sh  launchd.plist  voice-input-framework.service
docs/: ARCHITECTURE.md  DEVELOPMENT.md  ROADMAP.md  V1.1_DEVELOPMENT_PROGRESS.md  split-architecture.md
examples/: CHANGE_MODEL.md  __init__.py  build_gui.bat  build_gui.sh  change_model.ps1  change_model.py  change_model.sh  file_transcribe.py  gui_client.py  simple_client.py  streaming_demo.py
gui/: DEV_PLAN.md  index.html  package-lock.json  package.json
gui/public/: indicator.html
gui/src/: App.vue
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/capabilities/: default.json
gui/src-tauri/icons/: icon.icns
gui/src-tauri/src/: audio.rs  config.rs  hotkey.rs  indicator.rs  input.rs  lib.rs  main.rs  stt.rs  text.rs  tray.rs
llm_postprocessing/: __init__.py  download_models.py  evaluator.py  model_registry.py  test_dataset.py
models/: .gitkeep  README.md
scripts/: com.voiceinput.llm.plist  com.voiceinput.stt.plist  download-models.sh  install_daemon.sh  pre-commit.sh  run_tests.sh  setup_stt_env.sh  start_services.sh  test_services.py  uninstall_daemon.sh
server/: __init__.py  api.py  config.py  config_dev.py  llm_engine.py  stt_engine.py
server/models/: __init__.py  base.py  qwen3_asr.py  qwen3_asr_mlx.py  qwen3_asr_mlx_native.py  qwen_asr.py  whisper.py  whisper_cpp.py  whisper_mlx.py
services/: __init__.py  llm_server.py  stt_server.py
shared/: __init__.py  audio_confidence.py  data_types.py  model_registry.py  protocol.py
tests/: conftest.py  test_api_endpoints.py  test_config_manager.py  test_data_types.py  test_e2e.py  test_hotkey_manager.py  test_llm_server.py  test_mlx_qwen.py  test_models.py  test_stt_server.py
