[package]
name = "voice-input"
version = "0.1.0"
description = "Voice Input Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "voice_input_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-autostart = "2"
reqwest = { version = "0.12", features = ["json", "multipart"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cpal = "0.15"
enigo = { version = "0.2", default-features = false, features = ["default"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
rdev = "0.5"
